# ocaml_sandkasten

./: .gitignore  README.md  Readme.md  aoc2025.opam  bases.ml  buying_car.ml  codekata.opam  crepe.opam  dico.ml  dune-project  excercices.ml  exercices.ml  functors.ml  happy.ml  hello.opam  liste.ml  mathview.opam  maze.opam  ocaml_exercises.opam  parse_xapi_db.opam  roguelike.opam  sum.ml  synacor.opam  types.ml  xapi_db.opam
.github/workflows/: klotski.yml  ocaml.yml
abstract_and_algebric_data_type/: dune-project
abstract_and_algebric_data_type/aadt/: dune  main.ml
advance_of_code/: .gitignore  aoc.ml  day1.ml  day2.ml  dune
aoc2019/: Makefile  Readme.md  dune
aoc2019/lib/: day14.ml  day4.ml  day6.ml  dune
aoc2019/test/: dune  main_day14.ml  main_day4_1.ml  main_day6.ml
aoc2025/src/: day01.ml  day02.ml  day03.ml  day04.ml  dune  input.ml  main.ml  utils.ml
buying_car/: buying_car.ml  dune
c_bindings/: Makefile  hello.c  hello.ml
c_bindings/sdl/: Makefile  Readme.md  sdl_tuto.c
cmdliner_tuto/: chorus.opam  dune-project
cmdliner_tuto/chorus/: chorus.ml  dune
cmdliner_tuto/cmdliner_tuto/: cmdliner_tuto.ml  dune
cmdliner_tuto/revolt/: dune  revolt.ml
codekata/: Readme.md
codekata/lib/: dune  question1.ml  question2.ml
codingame/merlins-magic-square/: Makefile  Readme.md  dune-project  main.ml  merlin_square.ml
crepe/lib/: crepe.ml  dune
dream_tuto/: dune-project
dream_tuto/lib/: dune
dream_tuto/test/: dune
dsl_tuto/: Readme.md  dune-project
dsl_tuto/lib/: arithmetic.ml  dune  html_dsl.ml  mini_build.ml
dynlink/: Makefile  hello.ml  hello_dyn.ml  main.ml
effect_tuto/: dune-project  run.ml
exercism/nucleotide-count/: nucleotide_count.ml
gadt_tuto/: dune-project
happy/: dune  happy.ml
hash_table/: dune  maps.ml  maps_test.ml
hello/: hello.ml
http_request/: client.ml  dune
klotski_solver/: dune  klotski.ml  klotski_test.ml  main.ml  solver.ml
llvm/: demo.ll  demo.s  main.ml
lwt_tutorial/: Readme.md  dune  get_inputs.ml
maps/: Makefile  maps.ml  maps_test.ml
mathview/: Readme.md  dune  main.ml
maze/: Readme.md  maze.txt
monad/: dune-project
mutable_singly_linked_list/: mlist.ml
ocaml_exercises/: Readme.md
quicksort/: dune-project
rays/: Readme.md  dune-project  rays.opam
read_file/: dune-project
realworldocaml/: Readme.md  dune-project
roguelike/: Readme.md
scripting/: Readme.md  runls.ml
shape/: dune-project
socket/: Readme.md  dune-project  socket-xml.opam
stack/: .ocamlinit  Readme.md  mystack.ml  mystack.mli  test_mystack.ml
storage_functor_test/: dune-project
sum/: test.ml
synacor/: Readme.md
xapi_db/: Readme.md
(+69 files in other folders)
