(lang dune 3.20)
(generate_opam_files true)

;; common metadata applied to all packages unless overridden
(license MIT)
(maintainers "gthvn1@gmail.com")
(authors "gthvn1@gmail.com")
(homepage "https://github.com/gthvn1/ocaml_sandkasten")
(bug_reports "https://github.com/gthvn1/ocaml_sandkasten/issues")

(package
  (name hello)
  (synopsis "An OCaml sandbox: chaotic experiments, for fun and learning"))
